Add sudoku game

--- a/index.html
+++ b/index.html
@@ -47,13 +47,23 @@ hr { width : 350px; margin: 0 auto; }
     <ul>
         <li><a href="?game=drop">dropgame</a></li>
         <li><a href="?game=ten24">ten24</a></li>
+        <li><a href="?game=sudoku">sudoku</a></li>
+        <li><a href="?game=pairswap">pair swap</a></li>
     </ul>
 
     <div class="game">
     </div>
     <h4 class="game-title">Information/Description</h4>
-    <p class="game-information">
-    </p>
+    <p class="game-information"></p>
+
+    <footer>
+        <p>
+        Game assets are taken from <a href="https://opengameart.org/">opengameart.org</a>
+        and from other sources I lazily googled out of whim.
+        <p>
+        Tech used: [<a href="http://www.pixijs.com/">pixijs</a>, nodejs, webpack]
+        </p>
+    </footer>
 </div>
 </body>
 </html>
