--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@ hr { width : 350px; margin: 0 auto; }
 <body>
 <div class="wrapper">
     <h1>Algebra(ish) Games</h1>
+    <ul>
+        <li><a href="?game=drop">dropgame</a></li>
+        <li><a href="?game=ten24">ten24</a></li>
+        <li><a href="?game=sadaku">sadaku</a></li>
+        <li><a href="?game=pairswap">pair swap</a></li>
+        <li><a href="?game=checkers">checkers</a></li>
+    </ul>
+
+    <div class="game">
+    </div>
+    <h4 class="game-title">Information/Description</h4>
+    <p class="game-information"></p>
     <h2>What's this?</h2>
     <p>
         These are games are designed to (hopefully) help students
@@ -41,20 +53,6 @@ hr { width : 350px; margin: 0 auto; }
         and framework itself is more or less stable so it shouldn't
         be too hard to add new grid-based games.
     </p>
-    <hr>
-    <h3>Games</h3>
-
-    <ul>
-        <li><a href="?game=drop">dropgame</a></li>
-        <li><a href="?game=ten24">ten24</a></li>
-        <li><a href="?game=sudoku">sudoku</a></li>
-        <li><a href="?game=pairswap">pair swap</a></li>
-    </ul>
-
-    <div class="game">
-    </div>
-    <h4 class="game-title">Information/Description</h4>
-    <p class="game-information"></p>
 
     <footer>
         <p>
