Implement interpolated animations

--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@ hr { width : 350px; margin: 0 auto; }
 <body>
 <div class="wrapper">
     <h1>Algebra(ish) Games</h1>
-    <ul>
-        <li><a href="?game=drop">dropgame</a></li>
-        <li><a href="?game=ten24">ten24</a></li>
-        <li><a href="?game=sadaku">sadaku</a></li>
-        <li><a href="?game=pairswap">pair swap</a></li>
-        <li><a href="?game=checkers">checkers</a></li>
+    <ul class="games">
     </ul>
 
     <div class="game">
