Add game changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ hr { width : 350px; margin: 0 auto; }
 
     <div class="game">
     </div>
-    <h3><a href=".">(reset)</a></h3>
+    <!--<h3><a href=".">(reset)</a></h3>-->
     <script src="static/scripts/index.js"></script>
 </div>
 </body>
